--- a/guia-maker-da-impressao-3d.adoc
+++ b/guia-maker-da-impressao-3d.adoc
@@ -1,11 +1,11 @@
 = Guia Maker de Impressão 3D - Teoria e Prática Consolidadas
 Cláudio Luís Marques Sampaio, MSc.
-v0.99r2, 17/11/2017
+v0.99.3, 1/10/2017
 :updated: 2017-11-18
 :Author: Cláudio Luís Marques Sampaio, MSc.
 :Email: patola@makerlinux.com.br
-:Date: 18/11/2017
-:Revision: v0.99r2
+:Date: 1/10/2017
+:Revision: v0.99.3
 :doctype: book
 :producer: Asciidoctor
 :keywords: impressão3d, ebook, e-book, maker, 3dprinting
@@ -36,6 +36,8 @@ v0.99r2, 17/11/2017
 :imagesoutdir: img
 :front-cover-image: image:cover.png[Capa,1350,1909]
 ifndef::ebook-format[:leveloffset: 1]
+
+.Versão {Revision} de {Date}
 
 IMPORTANT: A versão mais atual deste livro estará sempre disponível no endereço:
 http://www.makerlinux.com.br/ebook[http://www.makerlinux.com.br/ebook]
