Pequenos ajustes, pus o número menor da versão na capa

--- a/guia-maker-da-impressao-3d-apendices.adoc
+++ b/guia-maker-da-impressao-3d-apendices.adoc
@@ -1,6 +1,7 @@
 [#guia-maker-da-impressao-3d-apendices]
 = Apêndices
 :imagesdir: imagens
+:imagesoutdir: img
 
 == Licença de uso e reprodução deste documento
 
