--- a/guia-maker-da-impressao-3d-acabamento.adoc
+++ b/guia-maker-da-impressao-3d-acabamento.adoc
@@ -1,6 +1,7 @@
 [#guia-maker-da-impressao-3d-acabamento]
 = Acabamento
 :imagesdir: imagens
+:imagesoutdir: img
 
 Se as impressoras 3D fossem construtores perfeitos como os replicadores de __Jornada nas Estrelas__, não haveria nem
 sentido em mencionar __acabamento__: afinal, as peças teriam saído prontas, __acabadas__, da máquina. Praticamente
