--- a/guia-maker-da-impressao-3d-gcode.adoc
+++ b/guia-maker-da-impressao-3d-gcode.adoc
@@ -1,6 +1,7 @@
 [#guia-maker-da-impressao-3d-gcode]
 = Diversão com G-Code
 :imagesdir: imagens
+:imagesoutdir: img
 
 Passamos brevemente pelo que é o G-Code em capítulos anteriores, mas não há como negar que o
 conhecimento desta ‘linguagem de máquina’ é essencial ao profissional de impressão 3D em todos os níveis,
