--- a/guia-maker-da-impressao-3d-acabamento.adoc
+++ b/guia-maker-da-impressao-3d-acabamento.adoc
@@ -10,7 +10,7 @@ diferentes técnicas de impressão 3D também seguem essa regra. O problema se e
 consiste de tarefas manuais, laboriosas e não automatizáveis -- o que acaba acontecendo, visto que o que é
 automatizável acaba entrando para o fluxo de trabalho da impressão 3D.
 
-== Acabamento é arte -- no pior sentido possível da palavra "arte"
+== Acabamento é arte -- no pior sentido possível da palavra "arte".
 
 Em suma, quando mencionamos _acabamento_ neste contexto, tratamos desta parte avessa à automatização. Seu
 caráter manual e dependente de talento individual tira o caráter tecnológico da tarefa e o coloca mais próximo
@@ -36,7 +36,7 @@ muitos dos quais, em seus campos especializados, exigem cursos de proteção e c
 (os vapores solventes são um exemplo). Fique portanto explícita a advertência que, por mais que esta obra dê
 direções gerais de precauções, o leitor deve consultar as referências externas para melhor segurança.
 
-== Ferramentas básicas
+== Ferramentas básicas:
 
 Cada técnica diferente de acabamento pode exigir ferramentas diferentes, mas existe um conjunto básico e comum
 a muitas delas que vale ser sugerido. É importante perceber que não é necessário ter todas as ferramentas
