Correções de grafia
Correções parciais da #16

--- a/guia-maker-da-impressao-3d-acabamento.adoc
+++ b/guia-maker-da-impressao-3d-acabamento.adoc
@@ -524,7 +524,7 @@ aparece por processos naturais, especiamente sintetizado por algumas algas e fun
 
 Muito de sua toxicidade vem de ser um composto organoclorado^2^, sendo reativo e carcinogênico. Apesar disso, é bem
 absorvido, metabolizado e eliminado por mamíferos após exposição oral ou dérmica, podendo criar feridas por
-dissolver os lipídios da epiderme. A eliminação é primariamente pelos pulmões. O clorofórmio é um depresso
+dissolver os lipídios da epiderme. A eliminação é primariamente pelos pulmões. O clorofórmio é um depressor
 do sistema nervoso central, podendo causar torpor e coma, com sintomas sérios com a ingestão de 7,5g do material
 e a dose letal sendo estimada em meros 45g.
 
